2005-04-22  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* insetcollapsable.C (doDispatch): do not pass through double/triple
	click events when they are not in the insetext (bug 1797).

2005-04-22  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* insetbase.h: document a bit more
	* insetbox.[Ch], insetbranch.[Ch], insetcollapsable.[Ch],
	insetcommand.[Ch], insetexternal.[Ch], insetfloat.[Ch],
	insetgraphics.[Ch], insetinclude.[Ch], insetnote.[Ch], insetwrap.[Ch]
	(getStatus): implement
	* insetcollapsable.[Ch] (hitButton): take a const argument
	* insetert.C (getStatus): enable LFUN_INSET_MODIFY, LFUN_PASTE and
	LFUN_PASTE_SELECTION

2005-04-19  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* insetcollapsable.C (doDispatch): pass through double/triple
	click events (bug 1811).

2005-04-14  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* insetwrap.C (addToToc): copy the code from InsetFloat::addToToc.

	* insetfloat.C (addToToc): do not use the harcoded "Caption" name,
	but the SENSITIVE label type. 

2005-04-18  Angus Leeming  <leeming@lyx.org>

	* ExternalSupport.[Ch] (doSubstitution): passed an extra boolean
	'use_latex_path' argument. In turn, passed to the new subst_path
	function when replacing placeholders with paths.
	
	* insetexternal.C (getScreenLabel): 
	* ExternalSupport.C (lots of places): change invocation of
	doSubstitution in lots of places, specifying the appropriate values
	for this 'use_latex_path' boolean.

	* insetbib.C (latex):
	* insetgraphics.C (latex):
	* insetinclude.C (latex): pass path to latex_path rather than to
	os::external_path.

2005-04-18  Martin Vermeer  <martin.vermeer@hut.fi>

	* insetcharstyle.C (validate): allow nested charstyle insets

2005-04-15  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* insettabular.C (getStatus): handle LFUN_INSET_MODIFY

2005-04-11  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* insetfloat.C (InsetFloat): 
	* insetwrap.C (InsetWrap): do not set layout here.
