@@ -1,3 +1,7 @@
+2005-04-22  Georg Baum  <Georg.Baum@post.rwth-aachen.de>
+
+	* insetbranch.C (getStatus): make the code more compact
+
 2005-04-22  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* insetcollapsable.C (doDispatch): do not pass through double/triple
